feat: improve generating default types
